# meal-planner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: README.md  index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  mcp-integration.js  meal-plans.js  recipe-parser.js  recipes.js
scripts/: setup_dev.py
src/meal_planner/: __init__.py
src/meal_planner/api/: dependencies.py  main.py
src/meal_planner/api/routers/: health.py  meal_plans.py  recipes.py  recipes_db.py  users.py
src/meal_planner/core/: config.py  models.py  services.py
src/meal_planner/db/: __init__.py  database.py  models.py  services.py
src/meal_planner/ml/llm/: base.py  ollama_provider.py
src/meal_planner/ml/ocr/: base.py  factory.py  marker_engine.py  pymupdf_engine.py
tests/: conftest.py  test_api.py  test_db_services.py  test_performance.py  test_recipe_parser.py
tests/unit/: test_models.py  test_services.py
